package com.googlecode.mobilityrpc.protocol.protobuf;
import "component_uuid.proto";

message RequestIdentifier {
    // A UUID which identifies the relevant class loader to use on remote machines
    // for deserializing objects and caching classes
    // This is usually generated as a UUID on the first/initiating client,
    // but could be persistent/constant for some applications
    required UUID session_id = 1;

    // A UUID generated by the client for each request it sends, which will allows it
    // to identify the relevant request object when the UUID is echoed back to the client
    // by a remote machine in an execution response message on completion of the request
    required UUID request_id = 2;

    // An optional arbitrary string generated by the client which describes the execution request,
    // for debugging purposes on both client and remote machine
    optional string request_label = 3 [default = "<no label>"];
}
